Add data_sheets dictionary

--- a/support/config.json
+++ b/support/config.json
@@ -2,6 +2,21 @@
   "data_dir": "Data_Directories",
   "report_name": "REPORT01",
   "report_ext": "xls",
+  "data_sheets":
+  {
+    "Sheet1":
+    [
+      "AcqMeth",
+      "AcqOp",
+      "InjDateTime",
+      "SampleName"
+      ],
+    "Compound":
+    [
+      "Name",
+      "Amount"
+    ]
+  },
   "data_columns":
   [
     "sample_name",
