Add test 'sheet' dictionary

--- a/support/config.json
+++ b/support/config.json
@@ -15,7 +15,12 @@
     [
       "Name",
       "Amount"
-    ]
+    ],
+    "test_sheet": {
+      "data1": "col1",
+      "data2": "col2",
+      "data3": "col3"
+    }
   },
   "data_columns":
   [
