--- a/config_files/config_default.json
+++ b/config_files/config_default.json
@@ -4,29 +4,31 @@
   "report_ext": "xls",
   "data_sheets":
   {
-    "Sheet1":
-    [
-      "AcqMeth",
-      "AcqOp",
-      "InjDateTime",
-      "SampleName"
+    "Sheet1": {
+      "headers_bool": 0,
+      "transpose_bool": 1,
+      "data_map": {
+        "AcqMeth": "method_nm",
+        "AcqOp": "operator_nm",
+        "InjDateTime": "dt_tm",
+        "SampleName": "sample_nm"
+      }
+    },
+    "Compound": {
+      "headers_bool": 1,
+      "headers_nm": [
+        "Name",
+        "Amount"
       ],
-    "Compound":
-    [
-      "Amount"
-    ]
-  },
-  "data_columns":
-  [
-    "sample_nm",
-    "dt_tm",
-    "operator_nm",
-    "method_nm",
-    "CO2_micro_L",
-    "H2_micro_L",
-    "O2_micro_L",
-    "N2_micro_L",
-    "CH4_micro_L",
-    "CO_micro_L"
-  ]
+      "transpose_bool": 1,
+      "data_map": {
+        "CARBON DIOXIDE": "CO2_micro_L",
+        "HYDROGEN": "H2_micro_L",
+        "OXYGEN": "O2_micro_L",
+        "NITROGEN": "N2_micro_L",
+        "METHANE": "CH4_micro_L",
+        "CARBON MONOXIDE": "CO_micro_L"
+      }
+    }
+  }
 }
