Correct data file ext in config_default.json

--- a/config_files/config_default.json
+++ b/config_files/config_default.json
@@ -1,7 +1,7 @@
 {
   "data_dir": "Data_Directories",
   "report_name": "REPORT01",
-  "report_ext": "xlsx",
+  "report_ext": "xls",
   "data_sheets":
   {
     "Sheet1": {
